add mongoose module + update readme with tips

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/NomadicWeb/skatedate",
   "dependencies": {
-    "express": "4.9.7"
+    "express": "4.9.7",
+    "mongoose": "3.8.17"
   }
 }
