update codebase to follow tutorial:
http://scotch.io/tutorials/javascript/build-a-restful-api-using-node-and-express-4

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/NomadicWeb/skatedate",
   "dependencies": {
     "express": "4.9.7",
-    "mongoose": "3.8.17"
+    "mongoose": "3.8.17",
+    "body-parser": "1.9.0"
   }
 }
