--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "url": "https://github.com/NomadicWeb/skatedate/issues"
   },
   "homepage": "https://github.com/NomadicWeb/skatedate",
+  // npm info <module_name> version
   "dependencies": {
     "express": "4.9.7",
     "mongoose": "3.8.17",
