--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "url": "https://github.com/NomadicWeb/skatedate/issues"
   },
   "homepage": "https://github.com/NomadicWeb/skatedate",
-  // npm info <module_name> version
   "dependencies": {
     "express": "4.9.7",
     "mongoose": "3.8.17",
-    "body-parser": "1.9.0"
+    "body-parser": "1.9.0",
+    "nodemailer": "1.3.0",
+    "jade": "1.7.0"
   }
 }
